--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 /* Pixel Moxie's LUOMO Tumblr Theme - v1.2.1 */
 
+$dark-post-background:            #494f50;
 $dark-post-text:                  #f5f5f5;
 $dark-post-accent:                #00ccff;
 $dark-post-link:                  #00ccff;
@@ -227,26 +228,30 @@ body { background-color: #343332; font-family: 'Segoe UI', Tahoma, Helvetica, sa
 /* Post types and post actions */
 
 /* Dark backgrounds */
-.post.dark .cont blockquote::before           { background-position: -120px 0; }
-.post.dark .cont ol.notes blockquote::before  { background-position: -80px -200px; }
-.post.dark .post_footer .timestamp::before    { background-position: 0 -340px; }
+.post.dark {
+  .cont blockquote::before           { background-position: -120px 0; }
+  .cont ol.notes blockquote::before  { background-position: -80px -200px; }
+  .post_footer .timestamp::before    { background-position: 0 -340px; }
+  .timestamp .icon                   { background-position: 0 -120px; }
+  .notecount .icon                   { background-position: -40px -120px; }
+  .dsq-comment-count .icon           { background-position: -80px -120px; }
+  .sharethis .icon                   { background-position: -120px -120px; }
+  .reblogthis .icon                  { background-position: -160px -120px; }
+}
 .post.dark.is_quote .icon_link a        { background-position: -120px 0; }
 .post.dark.is_text .icon_link a         { background-position: 0 0; }
-.post.dark .timestamp .icon             { background-position: 0 -120px; }
-.post.dark .notecount .icon             { background-position: -40px -120px; }
-.post.dark .dsq-comment-count .icon     { background-position: -80px -120px; }
-.post.dark .sharethis .icon             { background-position: -120px -120px; }
-.post.dark .reblogthis .icon            { background-position: -160px -120px; }
 
 /* Light backgrounds */
-.post.light .cont blockquote::before          { background-position: -120px -60px; }
-.post.light .cont ol.notes blockquote::before { background-position: -80px -240px; }
-.post.light .dsq-comment-count .icon    { background-position: -80px -160px; }
-.post.light .notecount .icon            { background-position: -40px -160px; }
-.post.light .post_footer .timestamp::before   { background-position: 0 -360px; }
-.post.light .reblogthis .icon           { background-position: -160px -160px; }
-.post.light .sharethis .icon            { background-position: -120px -160px; }
-.post.light .timestamp .icon            { background-position: 0 -160px; }
+.post.light {
+  .cont blockquote::before          { background-position: -120px -60px; }
+  .cont ol.notes blockquote::before { background-position: -80px -240px; }
+  .dsq-comment-count .icon          { background-position: -80px -160px; }
+  .notecount .icon                  { background-position: -40px -160px; }
+  .post_footer .timestamp::before   { background-position: 0 -360px; }
+  .reblogthis .icon                 { background-position: -160px -160px; }
+  .sharethis .icon                  { background-position: -120px -160px; }
+  .timestamp .icon                  { background-position: 0 -160px; }
+}
 .post.light.is_quote .icon_link a       { background-position: -120px -60px; }
 .post.light.is_text .icon_link a        { background-position: 0 -60px; }
 
@@ -273,16 +278,26 @@ ol.notes {
 /*
 @group Post Footer
 --------------------------------------------------------------------- */
-.post_footer { margin: 2em 0 0; font-style: italic; }
-.post_footer ul { list-style: none; margin: 0; padding: 0; }
-.post_footer a { text-decoration: none; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; -ms-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
-.post_footer .timestamp { padding: 0 0 0 20px; position: relative; }
-.post_footer .timestamp::before { background-color: transparent; content: ""; display: block; left: 0; top: 0; position: absolute; width: 20px; height: 20px; margin: 0 0 0 -2px; }
-.post_footer .tag_list { margin: 20px 0 0; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
-.post_footer .tags { font-size: 0.75em; font-style: normal; font-weight: bold; line-height: 1em; margin-left: -2px; }
-.post_footer .tags li { display: inline-block; margin: 2px; }
-.post_footer .tags a { display: block; padding: 4px 10px; border-radius: 999em; }
-.post_footer .tags a:hover { opacity: 0.7 }
+.post_footer {
+  margin: 2em 0 0;
+  font-style: italic;
+
+  ul { list-style: none; margin: 0; padding: 0; }
+  a { text-decoration: none; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; -ms-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
+  .timestamp { padding: 0 0 0 20px; position: relative; }
+  .timestamp::before { background-color: transparent; content: ""; display: block; left: 0; top: 0; position: absolute; width: 20px; height: 20px; margin: 0 0 0 -2px; }
+  .tag_list { margin: 20px 0 0; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; }
+  .tags {
+    font-size: 0.75em;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 1em;
+    margin-left: -2px;
+    li { display: inline-block; margin: 2px; }
+    a { display: block; padding: 4px 10px; border-radius: 999em; }
+    a:hover { opacity: 0.7 }
+  }
+}
 
 /*
 @group Post Colors
@@ -291,42 +306,67 @@ ol.notes {
 /* Dark backgrounds */
 .post:nth-child(odd),
 .post:nth-child(even).dark,
-.post.dark { background-color: #494f50 }
-.post.dark .post_info_bar { background-color: #494f50 }
-.post.dark .post_info_bar .icon_link, .post.dark .post_info_bar li a { background-color: #494f50; color: $dark-post-text; }
-.post.dark .post_info_bar li a:hover { background-color: $dark-post-accent !important; }
-.post.dark .cont { color: $dark-post-text }
-.post.dark .cont a { color: $dark-post-link; border-bottom: 2px solid $dark-post-link; }
-.post.dark .cont a:hover { color: $dark-post-link-hover; background-color: $dark-post-link-hover-bg; border-color: $dark-post-link-hover; }
-.post.dark .cont h2 a { color: $dark-post-text }
-.post.dark .cont h2 a:hover { color: $dark-post-link; background: none !important; }
-.post.dark .cont.reverse h2 a { color: $dark-post-link }
-.post.dark .cont.reverse h2 a:hover { color: $dark-post-link-hover }
-.post.dark .cont blockquote { border-color: $dark-post-text }
-.post.dark .cont ol.notes blockquote a { background: transparent !important; border: none !important; color: $dark-post-text !important; }
-.post.dark .post_footer, .post.dark .post_footer a { color: $dark-post-text }
-.post.dark .post_footer a:hover { color: $dark-post-link }
-.post.dark .post_footer .tag_list a { background-color: $dark-post-text; color: #494f50 !important; }
+.post.dark { background-color: $dark-post-background; }
+
+.post.dark {
+  .post_info_bar {
+    background-color: $dark-post-background;
+
+    .icon_link,
+    li a { background-color: $dark-post-background; color: $dark-post-text; }
+
+    li a:hover { background-color: $dark-post-accent !important; }
+  }
+  .cont {
+    color: $dark-post-text;
+
+    a { color: $dark-post-link; border-bottom: 2px solid $dark-post-link; }
+    a:hover { color: $dark-post-link-hover; background-color: $dark-post-link-hover-bg; border-color: $dark-post-link-hover; }
+    h2 a { color: $dark-post-text }
+    h2 a:hover { color: $dark-post-link; background: none !important; }
+    blockquote { border-color: $dark-post-text }
+    ol.notes blockquote a { background: transparent !important; border: none !important; color: $dark-post-text !important; }
+  }
+  .cont.reverse h2 a { color: $dark-post-link }
+  .cont.reverse h2 a:hover { color: $dark-post-link-hover }
+  .post_footer,
+  .post_footer a { color: $dark-post-text }
+
+  .post_footer a:hover { color: $dark-post-link }
+  .post_footer .tag_list a { background-color: $dark-post-text; color: $dark-post-background !important; }
+}
 
 /* Light backgrounds */
 .post:nth-child(even),
 .post:nth-child(odd).light,
-.post.light { background-color: $light-post-background }
-.post.light .post_info_bar { background-color: $light-post-background }
-.post.light .post_info_bar .icon_link, .post.light .post_info_bar li a { background-color: $light-post-background; color: $light-post-text; }
-.post.light .post_info_bar li a:hover { background-color: $light-post-accent !important; }
-.post.light .cont { color: $light-post-text }
-.post.light .cont a { color: $light-post-link; border-bottom: 2px solid $light-post-link; }
-.post.light .cont a:hover { color: $light-post-link-hover; background-color: $light-post-link-hover-bg; border-color: $light-post-link-hover; }
-.post.light .cont h2 a { color: $light-post-text }
-.post.light .cont h2 a:hover { color: $light-post-link; background: none !important; }
-.post.light .cont.reverse h2 a { color: $light-post-link }
-.post.light .cont.reverse h2 a:hover { color: $light-post-link-hover }
-.post.light .cont blockquote { border-color: $light-post-text }
-.post.light .cont ol.notes blockquote a { background: transparent !important; border: none !important; color: $light-post-text !important; }
-.post.light .post_footer, .post.light .post_footer a { color: $light-post-text }
-.post.light .post_footer a:hover { color: $light-post-link }
-.post.light .post_footer .tag_list a { background-color: $light-post-text; color: $light-post-background !important; }
+.post.light { background-color: $light-post-background; }
+
+.post.light {
+  .post_info_bar {
+    background-color: $light-post-background;
+    .icon_link,
+    li a { background-color: $light-post-background; color: $light-post-text; }
+
+    li a:hover { background-color: $light-post-accent !important; }
+  }
+  .cont {
+    color: $light-post-text;
+
+    a { color: $light-post-link; border-bottom: 2px solid $light-post-link; }
+    a:hover { color: $light-post-link-hover; background-color: $light-post-link-hover-bg; border-color: $light-post-link-hover; }
+    h2 a { color: $light-post-text }
+    h2 a:hover { color: $light-post-link; background: none !important; }
+    reverse h2 a { color: $light-post-link }
+    reverse h2 a:hover { color: $light-post-link-hover }
+    blockquote { border-color: $light-post-text }
+    ol.notes blockquote a { background: transparent !important; border: none !important; color: $light-post-text !important; }
+  }
+  .post_footer,
+  .post_footer a { color: $light-post-text }
+
+  .post_footer a:hover { color: $light-post-link }
+  .post_footer .tag_list a { background-color: $light-post-text; color: $light-post-background !important; }
+}
 
 /* Clearfix for the .slides element */
 .slides:after { content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0; }
@@ -515,9 +555,18 @@ only screen and (min-resolution: 144dpi)              and (min-width: 48em) {
 }
 
 /* Blog Footer */
-.blog_footer h4 { font-family: '$footer-header-font-family', sans-serif; font-weight: $footer-header-font-weight !important; }
-.blog_footer h4 { font-size: $footer-header-font-size; font-weight: normal; line-height: 1.1em; margin-bottom: 1em; text-transform: $footer-header-text-transform; }
-.blog_footer ol, .blog_footer ul, .blog_footer p { font-size: $footer-font-size; line-height: 1.5em; margin-bottom: 1em; }
+.blog_footer {
+  h4 {
+    font-family: '$footer-header-font-family', sans-serif;
+    font-weight: $footer-header-font-weight !important;
+    font-size: $footer-header-font-size;
+    font-weight: normal;
+    line-height: 1.1em;
+    margin-bottom: 1em;
+    text-transform: $footer-header-text-transform;
+  }
+  ol, ul, p { font-size: $footer-font-size; line-height: 1.5em; margin-bottom: 1em; }
+}
 
 
 /* @media screen and (min-width: 1280px) */
