--- a/source/_includes/_post_info_bar.html
+++ b/source/_includes/_post_info_bar.html
@@ -3,7 +3,7 @@
   <a href="{{ site.url }}{{ post.url }}" title="Permalink">Text</a>
 </div>
 <ul class="post_info">
-  <li class="hide_from_mobile">
+  <li>
     <a class="timestamp" href="{{ post.url }}" title="Posted on {{ post.date | date_to_long_string }}">
       <span class="icon"></span>
       <span class="legend">Posted on {{ post.date_formatted }}</span>
@@ -12,7 +12,7 @@
   <li>
     <a class="dsq-comment-count" href="{{ post.url }}#disqus_thread" title="Comments">
       <span class="icon"></span>
-      <span class="legend"><span class="hide_from_mobile">Comments</span></span>
+      <span class="legend"><span>Comments</span></span>
     </a>
   </li>
 </ul>
