--- a/source/_layouts/tag_index.html
+++ b/source/_layouts/tag_index.html
@@ -8,7 +8,7 @@ layout: default
     {% if tag == page.tag %}
       {% assign content = post.content %}
       {% if post.layout == "post" %}
-        {% include _post.html %}
+        {% include _post_excerpt.html %}
       {% elsif post.layout == "quote" %}
         {% include _quote.html %}
       {% endif %}
